Fixed spacing inconsistencies

--- a/_sass/4-pages/_contact.sass
+++ b/_sass/4-pages/_contact.sass
@@ -1,5 +1,5 @@
 #contact-container
-  margin: 20px auto 0
+  margin: 100px auto 0
   width: 300px
   font-family: $base-font
   text-align: center
