--- a/_sass/4-pages/_gigs.sass
+++ b/_sass/4-pages/_gigs.sass
@@ -1,5 +1,5 @@
 #gigs-wrapper
-	margin: 120px auto 0
+	margin: 100px auto 0
 	width: 50%
 	font-family: $base-font
 	text-align: center
@@ -42,4 +42,4 @@
 
 	img
 		width: 200px
-		padding-top: 50px
+		padding-top: 100px
