--- a/_sass/4-pages/_music.sass
+++ b/_sass/4-pages/_music.sass
@@ -12,7 +12,7 @@ button, input
   width: 300px
   min-height: 400px
   overflow: auto
-  margin: 20px auto
+  margin: 100px auto
   text-align: center
 
   h1
