--- a/_sass/4-pages/_pictures.sass
+++ b/_sass/4-pages/_pictures.sass
@@ -28,7 +28,7 @@
 #pictures-wrapper
   +outer-container
   max-width: 600px
-  margin-top: 0
+  margin-top: 100px
   text-align: center
 
   a
